--- a/medial-queries2/main.css
+++ b/medial-queries2/main.css
@@ -1,3 +1,40 @@
 body {
   background: papayawhip;
 }
+
+*{
+  outline: 1px solid red;
+}
+
+.container{
+  display: flex;
+  height: 55em;
+  flex-direction: column;
+}
+
+.a,.f{
+  height: 20%;
+  width: 100%;
+}
+
+.mid{
+  display: flex;
+  flex-wrap: wrap;
+  height: 60%;
+}
+
+.b{
+  width: 100%;
+}
+
+.c,.d,.e{
+  width: 33%;
+}
+
+@media screen and (min-width: 650px) {
+  .container{
+    display: flex;
+    flex-wrap:wrap;
+    height: 55em;
+  }
+}
